@startuml

interface Backups.IFileSaver
{
    +SaveFiles(IArchiver archiver, string archivePath, IStorage storage, IReadOnlyList<JobObject> jobObjects)
}

interface Backups.IArchiver
{
    +Stream Archive(List<JobObject> jobObjects)
    +Stream Archive(JobObject jobObject)
    +string GetArchiveNameFromFileName(string fileName)
}

class Backups.ZipArchiver
{
}

class Backups.RestorePoint
{
    -List<File> _files
    -string _folderPath
}

class Backups.BackupObject
{
    -string _fileName
    -string _filePath
    +File CreateFileObject()
}

class Backups.BackupJop
{
    -List<BackupObject> _JobObjects
    -List<RestorePoint> _restorePoints
    -IArchiver Archiver
    
    +CreateRestorePoint()
    +RemoveRestorePoint(RestorePoint restorePoint)
}

class BackupsClient.Client
{
    +grabSomeData()
}

class BackupsServer.Server
{
    +sendSomeData()
}

Backups.IArchiver ..|> Backups.ZipArchiver
Backups.IFileSaver ..|> Backups.SingleFileSaver
Backups.IFileSaver ..|> Backups.SplitFileSaver

Backups.IStorage ..|> Backups.LocalSaver
Backups.IStorage ..|> BackupsClient.WebFileSaver

Backups.IArchiver --* Backups.BackupJop
Backups.BackupObject --* Backups.BackupJop
Backups.RestorePoint --* Backups.BackupJop
Backups.File --* Backups.RestorePoint

@enduml